--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
     "localforage": "^1.10.0",
